# supra_seal

./: .gitignore  README.md  build.sh  exec.sh  test.sh
.cargo/: config.toml
c1/: c1.hpp  challenge.hpp  column_proof.hpp  label_proof.hpp  streaming_node_reader_files.hpp  tree_d_cc_nodes.h  tree_proof.hpp
c2/: Cargo.toml  README.md  bellperson-0.24.1.patch  bellperson-0.25.0.patch  build.rs
c2/cuda/: groth16_cuda.cu  groth16_ntt_h.cu  groth16_split_msm.cu  groth16_srs.cuh
c2/src/: lib.rs
c2/tests/: c2.rs
demos/: bellperson-0.25.0.patch  main.cpp
demos/.cargo/: config.toml
demos/c2-test/: Cargo.toml  run.me
demos/c2-test/tests/: c2.rs
demos/rust/: Cargo.toml  README.md  build.rs  supra_seal.cfg
demos/rust/src/: c2.rs  main.rs
nvme/: nvme.hpp  nvme_controller_t.hpp  nvme_namespace_t.hpp  ring_t.cpp  ring_t.hpp  spdk_ptr_t.hpp  streaming_node_reader_nvme.cpp  streaming_node_reader_nvme.hpp
pc1/: README.md  coordinator_t.hpp  node_rw_t.hpp  orchestrator_t.hpp  parent_iter_t.hpp  pc1.cpp  pc1.hpp  replica_id.hpp  system_buffers_t.hpp  tree_builder.hpp  tree_c.hpp  tree_d.hpp  tree_r.hpp
pc2/: pc2.hpp  pc2_internal.hpp  planner.cpp
pc2/cuda/: file_writer_t.hpp  host_ptr_t.hpp  pc2.cu  pc2.cuh
poseidon/: poseidon.cpp  poseidon.hpp
poseidon/constants/: constants_11  constants_2  constants_24  constants_8
poseidon/cuda/: poseidon.cu  poseidon_kernels.cu
sealing/: constants.hpp  data_structures.hpp  sector_parameters.cpp  sector_parameters.hpp  supra_seal.cpp  supra_seal.h  supra_seal.hpp  topology_t.hpp
sha/: sha_ext_mbx2.S
src/c1/: README.md  c1.cpp  c1.hpp  challenge.hpp  column_proof.hpp  label_proof.hpp  path_element.hpp  tree_d_cc_nodes.h  tree_proof.hpp
src/demos/: main.cpp
src/demos/rust/: Cargo.toml  build.rs  supra_seal.cfg  supra_seal_zen2.cfg
src/demos/rust/src/: main.rs
src/nvme/: nvme.hpp  nvme_controller_t.hpp  nvme_io_tracker_t.hpp  nvme_qpair_t.hpp  ring_t.hpp  sequential_io_t.hpp  spdk_ptr_t.hpp
src/pc1/: coordinator_t.hpp  node_rw_t.hpp  orchestrator_t.hpp  pc1.cpp  pc1.hpp  replica_id.cpp  system_buffers_t.hpp  tree_d.hpp
src/pc2/: README.md  column_reader.cpp  column_reader.hpp  pc2.hpp  pc2_internal.hpp  planner.cpp  streaming_node_reader.hpp
src/pc2/cuda/: cuda_lambda_t.hpp  host_ptr_t.hpp  pc2.cu  pc2.cuh
src/poseidon/: poseidon.cpp
src/poseidon/constants/: constants_16  constants_36  constants_4
src/poseidon/cuda/: poseidon.cu  poseidon_kernels.cu
src/sealing/: constants.hpp  data_structures.hpp  supra_seal.cpp  supra_seal.h  supra_seal.hpp  topology_t.hpp
src/sha/: sha_ext_mbx2.S  sha_functions.hpp
src/util/: stats.hpp  thread_pool_t.hpp  util.hpp
tools/: c1.cpp  pc2.cu  tree_d.cpp  tree_r.cpp
util/: debug_helpers.cpp  debug_helpers.hpp  file_t.hpp  mmap_t.hpp  sector_util.cpp  sector_util.hpp  util.hpp
