[package]
name = "supraseal-c2"
version = "0.1.0"
edition = "2021"

[dependencies]
blst = "^0.3.11"
sppark = "^0.1.3"

[dev-dependencies]
anyhow = "1.0.26"
bincode = "1.1.2"
filecoin-proofs-api = "14.0.0"
filecoin-proofs-v1 = { package = "filecoin-proofs", version = "~14.0.0", default-features = false }
storage-proofs-core = { version = "~14.0.0", default-features = false }

[features]
default = []
# Compile in portable mode, without ISA extensions.
# Binary can be executed on all systems.
portable = [ "blst/portable" ]
# Enable ADX even if the host CPU doesn't support it.
# Binary can be executed on Broadwell+ and Ryzen+ systems.
force-adx = [ "blst/force-adx" ]
quiet = []

[build-dependencies]
cc = { version = "^1.0.70", features = ["parallel"] }
which = "^4.0"
