[package]
name = "supraseal-c2-test"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
supraseal-c2 = "0"
anyhow = "1.0.26"
bincode = "1.1.2"
filecoin-proofs = { version = "16.0.0", default-features = false, features = ["cuda-supraseal"] }
storage-proofs-core = { version = "16.0.0", default-features = false, features = ["cuda-supraseal"] }
