[package]
name = "supra-seal-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["32GiB"]
512MiB = []
32GiB = []

[dependencies]
anyhow = "1.0.26"
bincode = "1.1.2"
filecoin-proofs-api = {version = "14.0.0", default-features = false }
filecoin-proofs-v1 = { package = "filecoin-proofs", version = "~14.0.0", default-features = false }
storage-proofs-core = { version = "~14.0.0", default-features = false }
supraseal-c2 = { path = "../../c2/" }

[target."cfg(target_arch = \"aarch64\")".dependencies]
sha2 = { version = "0.10.2", features = ["compress", "asm"] }
[target."cfg(not(target_arch = \"aarch64\"))".dependencies]
sha2 = { version = "0.10.2", features = ["compress"] }
