[package]
name = "supra-seal-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["32GiB"]
512MiB = []
32GiB = []

[dependencies]
anyhow = "1.0.26"
bincode = "1.1.2"

[target."cfg(target_arch = \"aarch64\")".dependencies]
sha2 = { version = "0.10.2", features = ["compress", "asm"] }
[target."cfg(not(target_arch = \"aarch64\"))".dependencies]
sha2 = { version = "0.10.2", features = ["compress"] }

[dependencies.filecoin-proofs]
package = "filecoin-proofs"
version = "14.0"
default-features = false
features = ["cuda"]

[dependencies.filecoin-proofs-api]
package = "filecoin-proofs-api"
version = "14.0"
default-features = false
